# localsend-rs

./: Cargo.toml  README.md
src/: axum2.rs  error.rs  info.rs  lib.rs  main.rs
src/cmd/: list.rs  mod.rs  send.rs
src/random/: mod.rs  words.rs
