[package]
name = "localsend"
version = "0.1.0"
edition = "2021"

[lib]
name = "localsend"
path = "src/lib.rs"

[[bin]]
name = "localsend"
path = "src/main.rs"

[dependencies]
argh = "0.1"
axum = { version = "0.7.5", features = [ "macros" ] }
dirs = "5.0.1"
getrandom = "0.2.15"
rand = "0.8.5"
reqwest = { version = "0.12.5", default-features = false, features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "fs"] }
